# random-flight

./: CLAUDE.md  Cargo.toml  build.rs
data/aircraft/: FORMAT.md  a20n.toml  a320.toml  a333.toml  a388.toml  b350.toml  b738.toml  b772.toml  b789.toml  c152.toml  c172.toml  c208.toml  crj7.toml  e190.toml  sr22.toml  tbm9.toml
docs/superpowers/plans/: 2026-03-20-random-flight-impl.md  2026-03-21-aircraft-performance-data.md  2026-03-21-simbrief-link.md  2026-03-24-taxi-time-model.md
docs/superpowers/specs/: 2026-03-19-random-flight-design.md  2026-03-21-aircraft-performance-data-design.md  2026-03-21-simbrief-link-design.md  2026-03-24-taxi-time-model-design.md
src/: aircraft.rs  airport.rs  error.rs  flight_plan.rs  geo.rs  lib.rs  main.rs  profile.rs  selection.rs
src/import/: lnmperf.rs  mod.rs
tests/: integration.rs
tests/fixtures/: sample.lnmperf  sample_legacy.lnmperf
