[package]
name = "random-flight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
humantime = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
toml = "0.8"

[build-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ureq = "3"
