[package]
name = "random-flight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
humantime = "2"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
quick-xml = "0.41"
thiserror = "2"
toml = "1"

[build-dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
ureq = "3"
